--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,53 +1,127 @@
-# Configuración del servidor
+# ============================================
+# BACKEND - Variables de Entorno
+# ============================================
+# IMPORTANTE: Copiar este archivo como .env y configurar con valores reales
+
+# Entorno de ejecución
 NODE_ENV=development
+# En producción usar: NODE_ENV=production
+
+# Puerto del servidor
 PORT=5000
+# En Render se asigna automáticamente, usar: PORT=10000
 
-# Puerto HTTP para redirección a HTTPS (solo en producción)
-HTTP_PORT=80
-
-# Base de datos PostgreSQL
+# ============================================
+# BASE DE DATOS POSTGRESQL
+# ============================================
+# Desarrollo (local)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=control_disciplina
 DB_USER=postgres
-DB_PASSWORD=password
+DB_PASSWORD=tu_password_local
 
-# JWT Secret (IMPORTANTE: cambiar en producción - mínimo 32 caracteres aleatorios)
-# NUNCA usar el valor de ejemplo en producción
-JWT_SECRET=CAMBIAR_ESTO_POR_SECRET_SEGURO_MINIMO_32_CARACTERES_ALEATORIOS
+# Producción (Render)
+# DB_HOST=dpg-xxxxx-a.oregon-postgres.render.com
+# DB_PORT=5432
+# DB_NAME=control_disciplina
+# DB_USER=admin_disciplina
+# DB_PASSWORD=tu_password_render_aqui
+
+# ============================================
+# JWT (JSON WEB TOKEN)
+# ============================================
+# CRÍTICO: Generar un secret único y seguro
+# Comando para generar: openssl rand -base64 64
+JWT_SECRET=tu_jwt_secret_minimo_32_caracteres_recomendado_64_caracteres_para_seguridad
 JWT_EXPIRE=7d
 
-# Frontend URL
-FRONTEND_URL=http://localhost:3000
+# ============================================
+# BCRYPT - Hash de Contraseñas
+# ============================================
+BCRYPT_ROUNDS=12
 
-# Certificados SSL (solo para producción con HTTPS)
-# Descomentar y configurar en producción
-# SSL_KEY_PATH=/etc/letsencrypt/live/tudominio.com/privkey.pem
-# SSL_CERT_PATH=/etc/letsencrypt/live/tudominio.com/fullchain.pem
-# SSL_CA_PATH=/etc/letsencrypt/live/tudominio.com/chain.pem
+# ============================================
+# MFA (MULTI-FACTOR AUTHENTICATION)
+# ============================================
+# Secret para generar códigos OTP
+# Comando para generar: openssl rand -base64 32
+MFA_SECRET=tu_mfa_secret_minimo_32_caracteres_para_otp
 
-# ==============================================
-# SEGURIDAD - EMAIL PARA MFA Y NOTIFICACIONES
-# ==============================================
-# ⚠️ REQUERIDO para funcionalidad MFA/2FA y expiración de contraseñas
-# Para Gmail: crear contraseña de aplicación en https://myaccount.google.com/apppasswords
+# ============================================
+# EMAIL (SMTP) - Para envío de códigos MFA
+# ============================================
+# Gmail SMTP
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_SECURE=false
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-gmail-app-password-16-chars
-EMAIL_FROM_NAME=Control Disciplina
+EMAIL_USER=tu-email@gmail.com
+EMAIL_PASSWORD=tu_app_password_de_16_caracteres
+EMAIL_FROM=Control Disciplina <noreply@controldisciplina.com>
 
-# Alternativa: Outlook/Hotmail
-# EMAIL_HOST=smtp.office365.com
-# EMAIL_PORT=587
-# EMAIL_SECURE=false
-# EMAIL_USER=your-email@outlook.com
-# EMAIL_PASSWORD=your-password
+# Otros proveedores SMTP (ejemplos):
+# Outlook: smtp-mail.outlook.com
+# Yahoo: smtp.mail.yahoo.com
+# SendGrid: smtp.sendgrid.net
 
-# Alternativa: SendGrid (Recomendado para producción)
-# EMAIL_HOST=smtp.sendgrid.net
-# EMAIL_PORT=587
-# EMAIL_SECURE=false
-# EMAIL_USER=apikey
-# EMAIL_PASSWORD=SG.your-sendgrid-api-key
+# ============================================
+# FRONTEND URL
+# ============================================
+# Desarrollo
+FRONTEND_URL=http://localhost:3000
+
+# Producción (Vercel)
+# FRONTEND_URL=https://tu-app.vercel.app
+
+# ============================================
+# SSL/TLS
+# ============================================
+# Desarrollo: false (usar HTTP)
+SSL_ENABLED=false
+
+# Producción: false (Render maneja HTTPS automáticamente)
+# SSL_ENABLED=false
+
+# Si usas certificados propios en desarrollo:
+# SSL_ENABLED=true
+# SSL_KEY_PATH=./certs/server.key
+# SSL_CERT_PATH=./certs/server.crt
+
+# ============================================
+# CORS (Cross-Origin Resource Sharing)
+# ============================================
+# Desarrollo
+CORS_ORIGIN=http://localhost:3000
+
+# Producción (Vercel)
+# CORS_ORIGIN=https://tu-app.vercel.app
+
+# Múltiples orígenes (separados por coma)
+# CORS_ORIGIN=http://localhost:3000,https://tu-app.vercel.app
+
+# ============================================
+# NOTAS DE SEGURIDAD
+# ============================================
+# 1. JWT_SECRET:
+#    - Usar mínimo 32 caracteres, recomendado 64
+#    - Generar con: openssl rand -base64 64
+#    - NUNCA subir al repositorio
+#
+# 2. DB_PASSWORD:
+#    - Contraseña fuerte, mínimo 16 caracteres
+#    - Incluir: mayúsculas, minúsculas, números, símbolos
+#
+# 3. EMAIL_PASSWORD:
+#    - Para Gmail usar "App Password" (no la contraseña real)
+#    - Crear en: https://myaccount.google.com/apppasswords
+#    - Requiere tener 2FA activado en Gmail
+#
+# 4. MFA_SECRET:
+#    - Secret único para generación de códigos OTP
+#    - Generar con: openssl rand -base64 32
+#
+# 5. CORS_ORIGIN:
+#    - Debe coincidir exactamente con la URL del frontend
+#    - Sin trailing slash: ✅ /app ❌ /app/
+#
+# 6. Este archivo (.env.example) SÍ se sube al repositorio
+#    El archivo .env (con valores reales) NUNCA se sube
