fix: Use npx craco to fix permission denied error in Vercel build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "CI=false craco build",
-    "vercel-build": "CI=false craco build",
+    "build": "CI=false npx craco build",
+    "vercel-build": "CI=false npx craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
