--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "CI=false npx craco build",
-    "vercel-build": "CI=false npx craco build",
+    "build": "node node_modules/react-scripts/bin/react-scripts.js build",
+    "vercel-build": "node node_modules/react-scripts/bin/react-scripts.js build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
