--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
     "postcss": "^8.4.28",
@@ -28,8 +29,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "node node_modules/react-scripts/bin/react-scripts.js build",
-    "vercel-build": "node node_modules/react-scripts/bin/react-scripts.js build",
+    "build": "cross-env CI=false node node_modules/react-scripts/bin/react-scripts.js build",
+    "vercel-build": "cross-env CI=false node node_modules/react-scripts/bin/react-scripts.js build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
